Building the search controller

--- a/src/dr.html
+++ b/src/dr.html
@@ -137,18 +137,23 @@
 
 <br><br>
 
-// TESTING*****
+
 <div id="section2" class="container shadow-lg rounded-lg" style="padding-top:50px;padding-bottom:50px">
   <h1 class="display-4">Найди свой цветок</h1>
   <br>
+  
+  <form class="search">
   <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+      <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Button</button>
     </div>
   </div>
+</form>
+
+
 </div>
-// TESTING****
+
 
 <div id="section42" class="container-fluid " style="padding-top:70px;padding-bottom:70px">
   <h1>Контакты</h1>
