Building the Search View

--- a/src/dr.html
+++ b/src/dr.html
@@ -141,15 +141,21 @@
 <div id="section2" class="container shadow-lg rounded-lg" style="padding-top:50px;padding-bottom:50px">
   <h1 class="display-4">Найди свой цветок</h1>
   <br>
-  
+
   <form class="search">
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Button</button>
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary " type="submit" id="button-addon2">Button</button>
+      </div>
     </div>
+  </form>
+
+ <br>
+  <div class="row row-cols-1 row-cols-md-3" id="renderApiResults">  
+
   </div>
-</form>
+  
 
 
 </div>
