Implementing search results pagination

--- a/src/dr.html
+++ b/src/dr.html
@@ -152,10 +152,12 @@
   </form>
 
  <br>
-  <div class="row row-cols-1 row-cols-md-3" id="renderApiResults">  
+  <div class="row row-cols-1 row-cols-md-2" id="renderApiResults">  
 
   </div>
-  
+  <div class="results__pages pb-4">
+
+  </div>
 
 
 </div>
