--- a/src/dr.html
+++ b/src/dr.html
@@ -138,15 +138,15 @@
 <br><br>
 
 
-<div id="section2" class="container shadow-lg rounded-lg" style="padding-top:50px;padding-bottom:50px">
-  <h1 class="display-4">Найди свой цветок</h1>
+<div id="section2" class="container shadow-lg rounded-lg" style="padding-top:50px;padding-bottom:20px">
+  <h1 class="display-4">Найди своё растение</h1>
   <br>
 
   <form class="search">
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+      <input type="text" class="form-control" placeholder="Введите название" aria-label="Recipient's username" aria-describedby="button-addon2">
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary " type="submit" id="button-addon2">Button</button>
+        <button class="btn btn-outline-secondary " type="submit" id="button-addon2">Поиск</button>
       </div>
     </div>
   </form>
@@ -155,7 +155,7 @@
   <div class="row row-cols-1 row-cols-md-2" id="renderApiResults">  
 
   </div>
-  <div class="results__pages pb-4">
+  <div class="results__pages" style="padding-bottom: 1px;">
 
   </div>
 
