Adding styles and messengers to contacts

--- a/src/drU.html
+++ b/src/drU.html
@@ -32,71 +32,72 @@
           <a class="nav-link active" href="#section1">О НАС</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">АПТЕЧКА ДЛЯ РАСТЕНИЙ</a>
+          <a class="nav-link" href="#section2">АПТЕЧКА ДЛЯ РОСЛИН</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section3">УСЛУГИ</a>
+          <a class="nav-link" href="#section3">ПОСЛУГИ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">ПОРТФОЛИО</a>
+          <a class="nav-link" href="./portfolio.html">ПОРТФОЛІО</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            КОНТАКТЫ
+            КОНТАКТИ
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="./drUcr.html">Link 1</a>
+            <a class="dropdown-item" href="#section41">Link 1</a>
             <a class="dropdown-item" href="#section42">контакты</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./drUcr.html">UKR</a>
+          <a class="nav-link" href="./drUcr.html" style="font-weight: bold;">UKR</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./index.html" style="font-weight: bold;">RUS</a>
+          <a class="nav-link" href="./index.html">RUS</a>
         </li>
+
       </ul>
   </nav>
 
   <div id="section1" class="containerTitle ">
     <h1 class="titleDoctorPlant">Doctor Plant</h1>
-    <h3 class="subtitleDoctorPlant"><small>Диагностика и лечение растений</small></h3>
+    <h3 class="subtitleDoctorPlant"><small>Діагностика та лікування рослин</small></h3>
   </div>
 
   <!-- <br><br> -->
 
   <div id="section2" class="containerInfo">
-    <h2 class="infoTitle">Чем болеют и почему</h2>
+    <h2 class="infoTitle">На що хворіють і чому</h2>
     <ul><br>
-      <li>Гниль – появляется из-за избытка полива или азотистых удобрений</li><br>
-      <li>Мучнистая роса на комнатных растениях (белый налет) – причиной может быть неподходящая температура или
-        влажность, а также грибок</li><br>
-      <li>Липкий налет на листьях – чаще всего появляется из-за тли и других паразитов</li><br>
-      <li>Паутина, опутывающая цветок – всему виной паутинные клещи, которые поражают растение и питаются его соками
+      <li>Гниль - з'являється через надлишок поливу або азотистих добрив</li><br>
+      <li>Борошниста роса на кімнатних рослинах (білий наліт) - причиною може бути невідповідна температура або
+        вологість, а також грибок</li><br>
+      <li>Липкий наліт на листках - найчастіше з'являється через попелиці та інших паразитів</li><br>
+      <li>Павутина, обплутує квітка - всьому виною павутинні кліщі, які вражають рослина і харчуються його соками
       </li><br>
-      <li>Мозаичные пятна и резкое увядание – признак вирусов</li><br>
-      <li>Вредители комнатных растений – их обычно видно невооруженным глазом. Это могут быть долгоносики, мокрицы, тля,
-        мухи, минеры, многоножки и многие другие</li><br>
+      <li>Мозаїчні плями і різке в'янення - ознака вірусів</li><br>
+      <li>Шкідники кімнатних рослин - їх зазвичай видно неозброєним оком. Це можуть бути довгоносики, мокриці, попелиця,
+        мухи, мінери, багатоніжки і багато інших</li><br>
     </ul>
   </div>
 
   <div id="section3" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-    <h4 class="display-4 pb-4 text-center">УСЛУГИ</h1>
+    <h4 class="display-4 pb-4 text-center">ПОСЛУГИ</h1>
       <div class="row pb-4">
         <div class="col-sm">
-          <h3><small class="services">Консультация</small></h3>
+          <h3><small class="services">Консультація</small></h3>
           <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
             look at the navigation bar while scrolling!</p>
 
         </div>
         <div class="col-sm">
-          <h3><small class="services">Выезд садовника</small></h3>
+          <h3><small class="services">Виїзд садівник</small></h3>
           <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
             look at the navigation bar while scrolling!</p>
 
         </div>
         <div class="col-sm">
-          <h3><small class="services">Пересадка любой сложности</small></h3>
+          <h3><small class="services">Пересадка будь-якої складності</small></h3>
           <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
             look at the navigation bar while scrolling!</p>
 
@@ -104,19 +105,19 @@
       </div>
       <div class="row pb-4">
         <div class="col-sm">
-          <h3><small class="services">Диагностика заболеваний, вредителей</small></h3>
+          <h3><small class="services">Діагностика захворювань, шкідників</small></h3>
           <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
             look at the navigation bar while scrolling!</p>
 
         </div>
         <div class="col-sm">
-          <h3><small class="services">Корректировка в уходе</small></h3>
+          <h3><small class="services">Коригування в догляді</small></h3>
           <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
             look at the navigation bar while scrolling!</p>
 
         </div>
         <div class="col-sm">
-          <h3><small class="services">Стрижка, обрезка, формировка</small></h3>
+          <h3><small class="services">Стрижка, обрізка, формировка</small></h3>
           <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
             look at the navigation bar while scrolling!</p>
 
@@ -187,15 +188,13 @@
     <div class="footerInfo">
       <div id="section42" class="footerText">
 
-        <h3 class="contactsTitle">Контакты</h3>
-        <div class="contactsText">Позвони нам: <div class="contactsValue"><a href="tel:+380631320649">+38 (063) 132 06
+        <h3 class="contactsTitle">Контакти</h3>
+        <div class="contactsText">Подзвони нам: <div class="contactsValue"><a href="tel:+380631320649">+38 (063) 132 06
               49</a></div>
         </div>
         <div class="contactsText">Напиши нам: <div class="contactsValue"><a
               href="mailto:dimaverall@gmail.com">dimaverall@gmail.com</a></div>
         </div>
-
-
         <div class="containerMesenger">
 
 
@@ -221,7 +220,6 @@
         </div>
 
       </div>
-
 
     </div>
   </div>
