--- a/src/dr.html
+++ b/src/dr.html
@@ -29,18 +29,21 @@
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#section1">О НАС</a>
+          <a class="nav-link active" href="#section1">о нас</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#section2">АПТЕЧКА ДЛЯ РАСТЕНИЙ</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="#section3">услуги</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section3">УСЛУГИ</a>
+          <a class="nav-link" href="#section42">контакты</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="./portfolio.html">ПОРТФОЛИО</a>
-        </li>
-        <li class="nav-item dropdown">
+        </li> -->
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             КОНТАКТЫ
           </a>
@@ -48,26 +51,40 @@
             <a class="dropdown-item" href="./drUcr.html">Link 1</a>
             <a class="dropdown-item" href="#section42">контакты</a>
           </div>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="./drUcr.html">ukr</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./drUcr.html">UKR</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html" style="font-weight: bold;">RUS</a>
+          <a class="nav-link" href="./index.html" style="font-weight: bold;">rus</a>
         </li>
       </ul>
   </nav>
 
-  <div id="section1" class="containerTitle ">
+  <div class="containerTitle ">
     <h1 class="titleDoctorPlant">Doctor Plant</h1>
     <h3 class="subtitleDoctorPlant"><small>Диагностика и лечение растений</small></h3>
   </div>
-
-  <!-- <br><br> -->
+  <div class="brandInfo" id="section1">
+    <h2>О нас</h2>
+    <p>Идея создания компании появилась в 2017 году, одним специалистом с квалификацией работы более 20 лет. Решив
+      рискнуть вместе с компаньоном, компания открывается в 2018 году под имением Doctor Plant.
+      Основной миссией и целью стоит лечение растений. В особенности, осложненные случаи, шанс которых на выживание
+      минимальный.</p>
+    <p>В 2019 году Doctor_Plant_ выходит на современный уровень общения в соцсетях
+      Именно тогда, исходя от запросов и многочисленных отзывов клиентов , пришла идея создания аптечек для растений.
+      Это позволило нашим клиентам , самостоятельно ухаживать за любимыми растениями.</p>
+    <p>Всем любви!</p>
+  </div>
 
   <div id="section2" class="containerInfo">
-    <h2 class="infoTitle">Чем болеют и почему</h2>
+    <h2 class="infoTitle">Чем болеют растения</h2>
     <ul><br>
+      <p>Абсолютно здоровых растений не существует. Мало того, в большинстве случаев инфекция носит комплексный
+        характер, т.е. на одном растении можно отметить несколько самых разнообразных болезней.</p>
+      <p>Болезни делятся на: инфекционные (вирусные, бактериальные, грибковые, паразиты); проблемы недостатка или
+        излишков питания; проблемы внешних условий по свету, ветру или влаге.</p>
+      <p>Вот нескольк примеров заболеваний: </p>
       <li>Гниль – появляется из-за избытка полива или азотистых удобрений</li><br>
       <li>Мучнистая роса на комнатных растениях (белый налет) – причиной может быть неподходящая температура или
         влажность, а также грибок</li><br>
@@ -80,48 +97,81 @@
     </ul>
   </div>
 
-  <div id="section3" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-    <h4 class="display-4 pb-4 text-center">УСЛУГИ</h1>
-      <div class="row pb-4">
-        <div class="col-sm">
-          <h3><small class="services">Консультация</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Выезд садовника</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Пересадка любой сложности</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
+  <div id="section3" class="container" style="padding-top:70px;padding-bottom:70px">
+    <h1 class="display-4 pb-4 text-center">УСЛУГИ</h1>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Консультация</small></h3>
+        <p>Мы всегда готовы прийти на помощь к вам и вашим зеленым друзьям. Осуществим максимально точную консультацию и
+          предложим пути решения</p>
       </div>
-      <div class="row pb-4">
-        <div class="col-sm">
-          <h3><small class="services">Диагностика заболеваний, вредителей</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Корректировка в уходе</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Стрижка, обрезка, формировка</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
+      <div class="col-sm">
+        <h3><small class="services">Выезд специалиста</small></h3>
+        <p>Многие случаи не могут обойтись без личного осмотра растения специалистом в таких случаях мы приезжаем и
+          проводим консультацию на месте</p>
       </div>
+      <div class="col-sm">
+        <h3><small class="services">Осмотр растений (комнатные и уличные)</small></h3>
+        <p>Многие случаи не могут обойтись без личного осмотра растения специалистом в таких случаях мы приезжаем и
+          проводим консультацию на месте!</p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Корректировка в уходе за растениями</small></h3>
+        <p>Часто не правильный или не актуальный уход за растением может привести к заболеванию или даже гибели
+          растения. Важно вовремя корректировать уход</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Диагностика заболеваний</small></h3>
+        <p>Помимо неправильного ухода растение также может быть подвержено заболеванию, которое нужно как можно скорее
+          диагностировать</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Назначение лечения</small></h3>
+        <p>После выявления болезни стоит незамедлительно сделать корректировку в уходе и назначить курс лечения</p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Обработка от вредителей и заболеваний (профилактика)</small></h3>
+        <p>Самым правильным решением от болезней и вредителей является профилактика. При своевременной обратботке вы
+          гарантируете защищенность растения</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Стрижка, обрезка, формировка
+          </small></h3>
+        <p>Мы поможем вашему саду получить вид как с картинки. предоставляем весь спектр услуг по стрижке растений</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Подкормка растений</small></h3>
+        <p>Чтобы растение росло именно таким образом как вы хотите и могло похвастаться пышно шевелюрой, нужно помогать
+          его росту дополнительными подкормками</p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Пересадка любой сложности</small></h3>
+        <p>С ходом роста растения ему все меньше подходит его вазон. Важно вовремя обращать внимание на то, что ему
+          тесно в старом вазоне. Мы же поможем ему с переездом в новый вазон</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Стрижка газона</small></h3>
+        <p>Стрижка газона для многих людей утомительный процесс но не для нас. Мы с радостью поможем вам с этой задачей
+        </p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Ландшафтный дизайн</small></h3>
+        <p>Поможем вам с организацией правильного и эстетичного ландшафтного дизайна, поможем подобрать растения и декор
+        </p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Онлайн-консультации</small></h3>
+        <p>Не все случаи требуют выезда специалиста. Иногда достаточно консультации по телефону или мессенджеру. </p>
+      </div>
+    </div>
   </div>
 
 
@@ -131,16 +181,28 @@
       <li data-target="#demo" data-slide-to="0" class="active"></li>
       <li data-target="#demo" data-slide-to="1"></li>
       <li data-target="#demo" data-slide-to="2"></li>
+      <li data-target="#demo" data-slide-to="3"></li>
+      <li data-target="#demo" data-slide-to="4"></li>
+      <li data-target="#demo" data-slide-to="5"></li>
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/photo1.jpg" alt="flowers" height="300px">
+        <img src="images/карусель 1.jpeg" alt="flowers" width="500" height="300px">
       </div>
       <div class="carousel-item">
-        <img src="images/photo2.jpg" alt="flowers" width="500" height="300px">
+        <img src="images/карусель 2.jpeg" alt="flowers" width="500" height="300px">
       </div>
       <div class="carousel-item">
-        <img src="images/photo3.jpg" alt="flowers" width="500" height="300px">
+        <img src="images/карусель 3.jpeg" alt="flowers" width="500" height="300px">
+      </div>
+      <div class="carousel-item">
+        <img src="images/карусель 4.jpeg" alt="flowers" width="500" height="300px">
+      </div>
+      <div class="carousel-item">
+        <img src="images/карусель 5.jpeg" alt="flowers" width="500" height="300px">
+      </div>
+      <div class="carousel-item">
+        <img src="images/карусель 6.jpeg" alt="flowers" width="500" height="300px">
       </div>
     </div>
     <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -150,9 +212,6 @@
       <span class="carousel-control-next-icon"></span>
     </a>
   </div>
-
-  <br><br>
-
 
   <!-- <div id="section2" class="container shadow-lg rounded-lg" style="padding-top:50px;padding-bottom:20px">
     <h1 class="display-4">Найди своё растение</h1>
@@ -179,50 +238,31 @@
 
   </div> -->
 
-
-
-  <br>
-
   <div class="footerContainer">
     <div class="footerInfo">
       <div id="section42" class="footerText">
-
         <h3 class="contactsTitle">Контакты</h3>
-        <div class="contactsText">Позвони нам: <div class="contactsValue"><a href="tel:+380631320649">+38 (063) 132 06
-              49</a></div>
+        <div class="contactsText">Позвони нам: <div class="contactsValue"><a href="tel:+380667352960">+38 (066) 735 29
+              60</a></div>
         </div>
         <div class="contactsText">Напиши нам: <div class="contactsValue"><a
-              href="mailto:dimaverall@gmail.com">dimaverall@gmail.com</a></div>
+              href="mailto:yurevich540@gmail.com">yurevich540@gmail.com</a></div>
         </div>
-
-
         <div class="containerMesenger">
-
-
-
-
-
-          <a href="mailto:dimaverall@gmail.com">
+          <a href="mailto:yurevich540@gmail.com">
             <div class="emailIcon"></div>
           </a>
           <a href="tg://resolve?domain=Veronica_Vl">
             <div class="telegramIcon"></div>
           </a>
-          <a href="whatsapp://send?phone=+380991176342">
+          <a href="whatsapp://send?phone=+380667352960">
             <div class="whatsappIcon"></div>
           </a>
-          <a href="viber://chat?number=+380991176342">
+          <a href="viber://chat?number=+380667352960">
             <div class="viberIcon"></div>
           </a>
-
-
-
-
         </div>
-
       </div>
-
-
     </div>
   </div>
 
