--- a/src/drU.html
+++ b/src/drU.html
@@ -29,15 +29,18 @@
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#section1">О НАС</a>
+          <a class="nav-link active" href="#section1">про нас</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#section2">аптечка для рослин</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="#section3">послуги</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">АПТЕЧКА ДЛЯ РОСЛИН</a>
+          <a class="nav-link" href="#section42">контакти</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#section3">ПОСЛУГИ</a>
-        </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="./portfolio.html">ПОРТФОЛІО</a>
         </li>
         <li class="nav-item dropdown">
@@ -48,27 +51,40 @@
             <a class="dropdown-item" href="#section41">Link 1</a>
             <a class="dropdown-item" href="#section42">контакты</a>
           </div>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="./drUcr.html" style="font-weight: bold;">ukr</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./drUcr.html" style="font-weight: bold;">UKR</a>
+          <a class="nav-link" href="./index.html">rus</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html">RUS</a>
-        </li>
-
       </ul>
   </nav>
 
-  <div id="section1" class="containerTitle ">
+  <div class="containerTitle ">
     <h1 class="titleDoctorPlant">Doctor Plant</h1>
     <h3 class="subtitleDoctorPlant"><small>Діагностика та лікування рослин</small></h3>
   </div>
-
-  <!-- <br><br> -->
+  <div class="brandInfo" id="section1">
+    <h2>Про нас</h2>
+    <p>Ідея створення компанії з'явилася в 2017 році, одним фахівцем з кваліфікацією роботи більше 20 років. Вирішивши
+      ризикнути разом з компаньйоном, компанія відкривається в 2018 році під назвою Doctor Plant.
+      Основною місією і метою є лікування рослин. Особливо, ускладнені випадки, шанс яких на виживання
+      мінімальний.</p>
+    <p>У 2019 Doctor Plant виходить на сучасний рівень спілкування в соцмережах.
+      Саме тоді, виходячи від запитів і численних відгуків клієнтів, прийшла ідея створення аптечок для рослин.
+      Це дозволило нашим клієнтам, самостійно доглядати за улюбленими рослинами.</p>
+    <p>Всім добра!</p>
+  </div>
 
   <div id="section2" class="containerInfo">
-    <h2 class="infoTitle">На що хворіють і чому</h2>
+    <h2 class="infoTitle">На що хворіють і рослини</h2>
     <ul><br>
+      <p>Абсолютно здорових рослин не існує. Мало того, в більшості випадків інфекція носить комплексний
+        характер, тобто на одній рослині можна відзначити кілька найрізноманітніших хвороб.</p>
+      <p>Хвороби діляться на: інфекційні (вірусні, бактеріальні, грибкові, паразити); проблеми нестачі або
+        надлишків харчування; проблеми зовнішніх умов по світу, вітрі або вологи.</p>
+      <p>Ось кіль прикладів захворювань:</p>
       <li>Гниль - з'являється через надлишок поливу або азотистих добрив</li><br>
       <li>Борошниста роса на кімнатних рослинах (білий наліт) - причиною може бути невідповідна температура або
         вологість, а також грибок</li><br>
@@ -81,67 +97,112 @@
     </ul>
   </div>
 
-  <div id="section3" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-    <h4 class="display-4 pb-4 text-center">ПОСЛУГИ</h1>
-      <div class="row pb-4">
-        <div class="col-sm">
-          <h3><small class="services">Консультація</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Виїзд садівник</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Пересадка будь-якої складності</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
+  <div id="section3" class="container" style="padding-top:70px;padding-bottom:70px">
+    <h1 class="display-4 pb-4 text-center">ПОСЛУГИ</h1>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Консультація</small></h3>
+        <p>Ми завжди готові прийти на допомогу до вас і вашим зеленим друзям. Здійснимо максимально точну консультацію і
+          запропонуємо шляхи вирішення</p>
       </div>
-      <div class="row pb-4">
-        <div class="col-sm">
-          <h3><small class="services">Діагностика захворювань, шкідників</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Коригування в догляді</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
-        <div class="col-sm">
-          <h3><small class="services">Стрижка, обрізка, формировка</small></h3>
-          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-            look at the navigation bar while scrolling!</p>
-
-        </div>
+      <div class="col-sm">
+        <h3><small class="services">Виїзд фахівця</small></h3>
+        <p>Багато випадків не можуть обійтися без особистого огляду рослини фахівцем в таких випадках ми приїжджаємо і
+          проводимо консультацію на місці</p>
       </div>
+      <div class="col-sm">
+        <h3><small class="services">Огляд рослин (кімнатні і вуличні)</small></h3>
+        <p>Багато випадків не можуть обійтися без особистого огляду рослини фахівцем в таких випадках ми приїжджаємо і
+          проводимо консультацію на місці!</p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Коригування в догляді за рослинами</small></h3>
+        <p>Часто неправильний або не актуальний догляд за рослиною може привести до захворювання або навіть загибелі
+          рослини. Важливо вчасно коригувати догляд</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Діагностика захворювань</small></h3>
+        <p>Крім неправильного догляду рослина також може бути піддана захворюванню, яке потрібно якомога швидше
+          діагностувати</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Призначення лікування</small></h3>
+        <p>Після виявлення хвороби варто негайно зробити коригування в догляді і призначити курс лікування</p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Обробка від шкідників і захворювань (профілактика)</small></h3>
+        <p>Найбільш правильним рішенням від хвороб і шкідників є профілактика. При своєчасній обробці ви
+          гарантуєте захищеність рослини</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Стрижка, обрізка, формировка
+          </small></h3>
+        <p>Ми допоможемо вашому саду отримати вид як з картинки. надаємо весь спектр послуг зі стрижки рослин</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Підживлення рослин</small></h3>
+        <p>Щоб рослина росла саме таким чином як ви хочете і могла похвалитися пишною шевелюрою, потрібно допомагати
+          її росту додатковими підгодівлею</p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Пересадка будь-якої складності</small></h3>
+        <p>З ходом росту рослини йому все менше підходить його вазон. Важливо вчасно звертати увагу на те, що йому
+          тісно в старому вазоні. Ми ж допоможемо йому з переїздом в новий вазон</p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Стрижка газону</small></h3>
+        <p>Стрижка газону для багатьох людей виснажливий процес але не для нас. Ми з радістю допоможемо вам з цим
+          завданням
+        </p>
+      </div>
+      <div class="col-sm">
+        <h3><small class="services">Ландшафтний дизайн</small></h3>
+        <p>Допоможемо вам з організацією правильного і естетичного ландшафтного дизайну, допоможемо підібрати рослини і
+          декор
+        </p>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-sm">
+        <h3><small class="services">Онлайн-консультації</small></h3>
+        <p>Не всі випадки вимагають виїзду фахівця. Іноді досить консультації по телефону або месенджер</p>
+      </div>
+    </div>
   </div>
-
-
 
   <div id="demo" class="carousel slide" data-ride="carousel">
     <ul class="carousel-indicators">
       <li data-target="#demo" data-slide-to="0" class="active"></li>
       <li data-target="#demo" data-slide-to="1"></li>
       <li data-target="#demo" data-slide-to="2"></li>
+      <li data-target="#demo" data-slide-to="3"></li>
+      <li data-target="#demo" data-slide-to="4"></li>
+      <li data-target="#demo" data-slide-to="5"></li>
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/photo1.jpg" alt="flowers" height="300px">
+        <img src="images/карусель 1.jpeg" alt="flowers" width="500" height="300px">
       </div>
       <div class="carousel-item">
-        <img src="images/photo2.jpg" alt="flowers" width="500" height="300px">
+        <img src="images/карусель 2.jpeg" alt="flowers" width="500" height="300px">
       </div>
       <div class="carousel-item">
-        <img src="images/photo3.jpg" alt="flowers" width="500" height="300px">
+        <img src="images/карусель 3.jpeg" alt="flowers" width="500" height="300px">
+      </div>
+      <div class="carousel-item">
+        <img src="images/карусель 4.jpeg" alt="flowers" width="500" height="300px">
+      </div>
+      <div class="carousel-item">
+        <img src="images/карусель 5.jpeg" alt="flowers" width="500" height="300px">
+      </div>
+      <div class="carousel-item">
+        <img src="images/карусель 6.jpeg" alt="flowers" width="500" height="300px">
       </div>
     </div>
     <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -151,9 +212,6 @@
       <span class="carousel-control-next-icon"></span>
     </a>
   </div>
-
-  <br><br>
-
 
   <!-- <div id="section2" class="container shadow-lg rounded-lg" style="padding-top:50px;padding-bottom:20px">
     <h1 class="display-4">Найди своё растение</h1>
@@ -180,47 +238,31 @@
 
   </div> -->
 
-
-
-  <br>
-
   <div class="footerContainer">
     <div class="footerInfo">
       <div id="section42" class="footerText">
-
         <h3 class="contactsTitle">Контакти</h3>
-        <div class="contactsText">Подзвони нам: <div class="contactsValue"><a href="tel:+380631320649">+38 (063) 132 06
-              49</a></div>
+        <div class="contactsText">Подзвони нам: <div class="contactsValue"><a href="tel:+380667352960">+38 (066) 735 29
+              60</a></div>
         </div>
         <div class="contactsText">Напиши нам: <div class="contactsValue"><a
-              href="mailto:dimaverall@gmail.com">dimaverall@gmail.com</a></div>
+              href="mailto:yurevich540@gmail.com">yurevich540@gmail.com</a></div>
         </div>
         <div class="containerMesenger">
-
-
-
-
-
-          <a href="mailto:dimaverall@gmail.com">
+          <a href="mailto:yurevich540@gmail.com">
             <div class="emailIcon"></div>
           </a>
           <a href="tg://resolve?domain=Veronica_Vl">
             <div class="telegramIcon"></div>
           </a>
-          <a href="whatsapp://send?phone=+380991176342">
+          <a href="whatsapp://send?phone=+380667352960">
             <div class="whatsappIcon"></div>
           </a>
-          <a href="viber://chat?number=+380991176342">
+          <a href="viber://chat?number=+380667352960">
             <div class="viberIcon"></div>
           </a>
-
-
-
-
         </div>
-
       </div>
-
     </div>
   </div>
 
