--- a/src/dr.html
+++ b/src/dr.html
@@ -23,9 +23,9 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
     <a href="#" class="navbar-brand" style="font-size: 25px;">Doctor Plant</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" style="border: none">
-      <span class="fas fa-angle-down" style="color: green"></span>
-    </button>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" style="border: none">menu</button>
+    <!-- <span class="fas fa-angle-down" style="color: green">menu</span> -->
+
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
