--- a/src/drU.html
+++ b/src/drU.html
@@ -23,9 +23,9 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
     <a href="#" class="navbar-brand" style="font-size: 25px;">Doctor Plant</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" style="border: none">
-      <span class="fas fa-angle-down" style="color: green"></span>
-    </button>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" style="border: none">menu</button>
+    <!-- <span class="fas fa-angle-down" style="color: green"></span> -->
+
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -78,7 +78,7 @@
   </div>
 
   <div id="section2" class="containerInfo">
-    <h2 class="infoTitle">На що хворіють і рослини</h2>
+    <h2 class="infoTitle">На що хворіють рослини</h2>
     <ul><br>
       <p>Абсолютно здорових рослин не існує. Мало того, в більшості випадків інфекція носить комплексний
         характер, тобто на одній рослині можна відзначити кілька найрізноманітніших хвороб.</p>
